infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: mma/expiration
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: "500m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "256Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "250m" # Mindestens 250 Millicores CPU rese
