infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: mahmoodads/auth
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 200m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "200Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "50m" # Mindestens 250 Millicores CPU rese 
---
apiVersion: v1
kind: Service
metadata:
  name: auth-ser
spec:
  selector:
    app: auth
  ports:
  - name: auth
    protocol: TCP
    port: 3000 # this port is to communicate with pods from outside the cluster 
    targetPort: 3000 # this targetPort is to communicate with pods from inside the cluster
