infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: mahmoodads/client
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 200m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "150Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "50m" # Mindestens 250 Millicores CPU rese 
---
apiVersion: v1
kind: Service
metadata:
  name: client-ser
spec:
  selector:
    app: client
  ports:
  - name: client
    protocol: TCP
    port: 3000 # this port is to communicate with pods from outside the cluster 
    targetPort: 3000 # this targetPort is to communicate with pods from inside the cluster
