infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: mahmoodads/orders
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 200m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "150Mi" # Mindestens 256 MB Speicher reservieren von RAM
            cpu: "50m" # Mindestens 250 Millicores CPU rese 
---
apiVersion: v1
kind: Service
metadata:
  name: orders-ser
spec:
  selector:
    app: orders
  ports:
  - name: orders
    protocol: TCP
    port: 3000 # this port is to communicate with pods from outside the cluster 
    targetPort: 3000 # this targetPort is to communicate with pods from inside the cluster
