infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - name: payments
        image: mma/payments
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 500m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "256Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "250m" # Mindestens 250 Millicores CPU rese
---
apiVersion: v1
kind: Service
metadata:
  name: payments-ser
spec:
  selector:
    app: payments
  ports:
  - name: payments
    protocol: TCP
    port: 3000 # this port is to communicate with pods from outside the cluster 
    targetPort: 3000 # this targetPort is to communicate with pods from inside the cluster
