infra/k8s/payments-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-mongo-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: payments-mongo
  template:
    metadata:
      labels:
        app: payments-mongo
    spec:
      containers:
      - name: payments-mongo
        image: mongo
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 200m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "150Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "50m" # Mindestens 250 Millicores CPU rese 
---
apiVersion: v1
kind: Service
metadata:
  name: payments-mongo-ser
spec:
  selector:
    app: payments-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017 # this port is to communicate with pods from outside the cluster , I have it found in Dokumentation
    targetPort: 27017 # this targetPort is to communicate with pods from inside the cluster, I have it found in Dokumentation
