infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: mma/tickets
        resources:
          limits:
            memory: "1024Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: "1000m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "256Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "250m" # Mindestens 250 Millicores CPU rese
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-ser
spec:
  selector:
    app: tickets
  ports:
  - name: tickets
    protocol: TCP
    port: 3000 # this port is to communicate with pods from outside the cluster 
    targetPort: 3000 # this targetPort is to communicate with pods from inside the cluster
