infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        resources:
          limits:
            memory: "512Mi" # Maximaler Speicher auf 512 MB begrenzen
            cpu: " 500m" # Maximaler CPU-Verbrauch auf 500 Millicores begrenzen
          requests:
            memory: "256Mi" # Mindestens 256 MB Speicher reservieren
            cpu: "250m" # Mindestens 250 Millicores CPU rese
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-ser
spec:
  selector:
    app: tickets-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017 # this port is to communicate with pods from outside the cluster , I have it found in Dokumentation
    targetPort: 27017 # this targetPort is to communicate with pods from inside the cluster, I have it found in Dokumentation
