infra/k8s/ingress-ser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ser
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-cookie-path: "/ /"

spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/payments/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: payments-ser
            port:
              number: 3000
      - path: /api/users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-ser
            port:
              number: 3000
      - path: /api/tickets/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tickets-ser
            port:
              number: 3000
      - path: /api/orders/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: orders-ser
            port:
              number: 3000
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-ser
            port:
              number: 3000
